# CreepDir

./: .gitignore  Cargo.toml  README.md  creepdir.py
src/: app.rs  cli.rs  config.rs  main.rs  scan.rs
src/output/: csv.rs  json.rs  mod.rs  text.rs
