[package]
name = "CreepDir"
version = "0.1.1"
edition = "2021"
description = "A CLI tool to scan folders and catalog files by extension"
license = "MIT"
repository = "https://github.com/Aspenini/CreepDir"
keywords = ["directory", "scanner", "file-catalog", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rfd = "0.14"

[[bin]]
name = "CreepDir"
path = "src/main.rs"

