[package]
name = "CreepDir"
version = "0.2.0"
edition = "2024"
description = "A CLI tool to scan folders and catalog files by extension"
license = "MIT"
repository = "https://github.com/Aspenini/CreepDir"
keywords = ["directory", "scanner", "file-catalog", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rfd = "0.14"
jwalk = "0.8"
globset = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "CreepDir"
path = "src/main.rs"

